# Bildverarbeitung-OpenCV

./: .gitignore  README.md
ppt/: Bildverarbeitung-OpenCV.pptx
src/: CMakeLists.txt  bluebox.cpp
